--- a/style.css
+++ b/style.css
@@ -1,28 +1,31 @@
 #square1 {
-    background-color: green;
+    background-color: rgba(0, 128, 0, 0.3);
     border: none;
     float: left;
     top: 0;
     padding: 200px 25%;
 }
 #square2 {
-    background-color: red;
+    background-color: rgba(205, 0, 0, 0.3);
     border: none;
     float: right;
     top: 0;
     padding: 200px 25%;
 }
 #square3 {
-    background-color: yellow;
+    background-color: rgba(205, 205, 0, 0.3);
     border: none;
     float: left;
     bottom: 0;
     padding: 200px 25%;
 }
 #square4 {
-    background-color: blue;
+    background-color: rgba(0, 0, 205, 0.3);
     border: none;
     float: right;
     bottom: 0;
     padding: 200px 25%;
+}
+#ready {
+    bottom: 0;
 }
