--- a/style.css
+++ b/style.css
@@ -2,30 +2,27 @@
     background-color: rgba(0, 255, 0, 0.3);
     border: none;
     float: left;
-    top: 0;
     padding: 200px 25%;
 }
 #square2 {
     background-color: rgba(255, 0, 0, 0.3);
     border: none;
     float: right;
-    top: 0;
     padding: 200px 25%;
 }
 #square3 {
     background-color: rgba(255, 255, 0, 0.3);
     border: none;
     float: left;
-    bottom: 0;
     padding: 200px 25%;
 }
 #square4 {
     background-color: rgba(0, 0, 255, 0.3);
     border: none;
     float: right;
-    bottom: 0;
     padding: 200px 25%;
 }
 #ready {
-    bottom: 0;
+    position: absolute;
+    margin: 0;
 }
